Fix most bad URL line breaks in PDF

--- a/themes/default/source/css/print.scss
+++ b/themes/default/source/css/print.scss
@@ -474,9 +474,8 @@ $print-trim: $print-bleed * 2;
   // that are printed in the text of the book, in order to facilitate better
   // line breaking per Chicago Manual of Style
   // https://www.chicagomanualofstyle.org/book/ed17/part3/ch14/psec018.html
-  a[target=_blank] {
-    prince-text-replace: "/" "\200B/"
-                          "~" "\200B~"
+  a[href^="http"] {
+    prince-text-replace: "~" "\200B~"
                           "." "\200B."
                           "," "\200B,"
                           "-" "\200B-"
@@ -487,9 +486,8 @@ $print-trim: $print-bleed * 2;
                           "=" "\200B="
                           "&" "\200B&"
                           "+" "\200B+"
-                          ":" "\200B:"
-                          "\200B/\200B/" "//\200B"
-                          "\200B:\200B:" "\200B::";
+                          ":" ":\200B"
+                          "//" "//\200B";
   }
 
   // Same method as above but to improve breaks around em-dashes
